--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@ngxs/storage-plugin": "^3.4.3",
     "@ngxs/store": "^3.4.3",
     "angular2-toaster": "^7.0.0",
-    "bootstrap": "4.2.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "firebase": "^6.0.4",
-    "ngx-bootstrap": "^4.2.0",
+    "ngx-bootstrap": "^4.3.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
